--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,28 @@
-<router-outlet></router-outlet>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
+	<div class="container">
+	  <a class="navbar-brand" href="#">Angular 9 Routing Tutorial</a>
+  
+	  <ul class="nav nav-pills">
+		<li class="nav-item">
+		  <a class="nav-link" routerLinkActive="active" routerLink="/login">Login</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" routerLinkActive="active" routerLink="/about">About</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" routerLinkActive="active" routerLink="/bugs">Bugs</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" routerLinkActive="active" routerLink="/contact">Contact</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" routerLinkActive="active" routerLink="/xtz">Not found</a>
+		  </li>
+	  </ul>
+	</div>
+  </nav>
+  
+  <div class="container text-center">
+	<router-outlet></router-outlet>
+  </div>
